<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#9D00FF">

    <LinearLayout
        android:id="@+id/top_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="#9D00FF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_nav_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:cardBackgroundColor="#9D00FF">

            <ImageView
                android:id="@+id/logo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="13dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_name_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fromCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="#9D00FF"
        android:elevation="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Heading: Add New Bus -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#9D00FF"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_margin="20dp"
                    android:text="@string/sacco_log_in_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/sacco_email_text"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/bus_route_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="#FFFFFF"
                    android:drawableStart="@drawable/mail_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/sacco_email_instructions"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColor="#000000"
                    android:textColorHighlight="#0B0707"
                    android:textColorHint="#000000"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/password_text"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="#FFFFFF"
                    android:drawableStart="@drawable/password_icon"
                    android:drawableEnd="@drawable/visibility_off_icon"
                    android:drawablePadding="15dp"
                    android:hint="@string/sacco_pass_instructions"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="#000000"
                    android:textColorHighlight="#0B0707"
                    android:textColorHint="#000000"
                    tools:ignore="TextFields" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="25dp">

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="#959179"
                        android:padding="25dp"
                        android:text="@string/login_text" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="25dp">

                    <Button
                        android:id="@+id/sign_up_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="#9D00FF"
                        android:padding="25dp"
                        android:text="@string/sacco_signup_txt"
                        android:textColor="#FFFFFF" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="25dp">

                    <Button
                        android:id="@+id/forgot_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="#9D00FF"
                        android:padding="25dp"
                        android:text="@string/forgot_password_txt"
                        android:textColor="#FFFFFF" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>